that purpose, check the source.

"tickColor" on the grid options is now deprecated in favour of a
corresponding option on the axes, so { grid: { tickColor: "#000" }}
becomes { xaxis: { tickColor: "#000"}, yaxis: { tickColor: "#000"} },
but if you just configure a base color Flot will now autogenerate a
tick color by adding transparency. Backwards-compatibility hooks are
in place.

Changes:

- Support for specifying a bottom for each point for line charts when
  filling them, this means that an arbitrary bottom can be used
  instead of just the x axis (based on patches patiently provided by
  Roman V. Prikhodchenko).
- New fillbetween plugin that can compute a bottom for a series from
  another series, useful for filling areas between lines (see new
  example percentiles.html for a use case).
- More predictable handling of gaps for the stacking plugin, now all
  undefined ranges are skipped.
- Stacking plugin can stack horizontal bar charts.
- Navigate plugin now redraws the plot while panning instead of only
  after the fact (can be disabled by setting the pan.frameRate option
  to null), raised by lastthemy (issue 235).
- Date formatter now accepts %0m and %0d to get a zero-padded month or
  day (issue raised by Maximillian Dornseif).
- Revamped internals to support an unlimited number of axes, not just
  dual (sponsored by Flight Data Services,
  www.flightdataservices.com).
- New setting on axes, "tickLength", to control the size of ticks or
  turn them off without turning off the labels.
- Axis labels are now put in container divs with classes, for instance
  labels in the x axes can be reached via ".xAxis .tickLabel".
- Support for setting the color of an axis (sponsored by Flight Data
  Services, www.flightdataservices.com).
- Tick color is now auto-generated as the base color with some
  transparency (unless you override it).
- Support for aligning ticks in the axes with "alignTicksWithAxis" to