@@ -3,7 +3,7 @@
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Flot Pie Examples</title>
-	<!--[if IE]><script language="javascript" type="text/javascript" src="../excanvas.min.js"></script><![endif]-->
+	<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="../excanvas.min.js"></script><![endif]-->
     <script language="javascript" type="text/javascript" src="../jquery.js"></script>
 	<script language="javascript" type="text/javascript" src="../jquery.flot.js"></script>
     <script language="javascript" type="text/javascript" src="../jquery.flot.pie.js"></script>
